--- a/ejabT1E/NAMESPACE
+++ b/ejabT1E/NAMESPACE
@@ -4,11 +4,8 @@ export(estimate_Cstar)
 export(detect_type1)
 export(diagnostic_U)
 export(diagnostic_qqplot)
-export(diagnostic_qqplot_bf)
-export(bayes_factor_t1e)
-export(posterior_t1e)
+export(calibration_plot)
 export(ejab_pipeline)
 
-importFrom(stats, pchisq, qchisq, ppoints, qunif)
-importFrom(graphics, plot, abline, par, layout, image, axis, mtext)
-importFrom(grDevices, colorRampPalette)
+importFrom(stats, pchisq, qchisq, ppoints, qunif, qbeta, uniroot, runif)
+importFrom(graphics, plot, abline, lines, points)
