--- a/ejabT1E/DESCRIPTION
+++ b/ejabT1E/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ejabT1E
 Title: Detecting Type I Errors Through Bayes/NHST Conflict Using eJAB
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(
     person("Evan", "Strasdin", email = "evn.strsdn@pm.me", role = c("aut", "cre")),
     person("Farouk", "Nathoo", role = "aut"),
@@ -10,9 +10,8 @@ Authors@R: c(
 Description: Identifies candidate Type I errors in collections of NHST results
     by detecting Bayes/NHST contradictions using the eJAB01 approximate objective
     Bayes factor. Estimates a tuning parameter C* via minimization of an integrated
-    squared deviation objective, produces diagnostic QQ-plots, and computes
-    posterior probabilities of Type I error for each result.
+    squared deviation objective and produces diagnostic QQ-plots.
 License: GPL-3
 Encoding: UTF-8
-Imports: stats, graphics, grDevices
+Imports: stats, graphics
 RoxygenNote: 7.3.1
