--- a/ejabT1E/DESCRIPTION
+++ b/ejabT1E/DESCRIPTION
@@ -14,5 +14,5 @@ Description: Identifies candidate Type I errors in collections of NHST results
     QQ-plots.
 License: GPL-3
 Encoding: UTF-8
-Imports: stats, ggplot2
+Imports: stats, graphics
 RoxygenNote: 7.3.1
