--- a/ejabT1E/NAMESPACE
+++ b/ejabT1E/NAMESPACE
@@ -7,5 +7,5 @@ export(diagnostic_qqplot)
 export(calibration_plot)
 export(ejab_pipeline)
 
-importFrom(stats, pchisq, qchisq, ppoints, qunif, qbeta, uniroot, runif, lm, coef)
-import(ggplot2)
+importFrom(stats, pchisq, qchisq, ppoints, qunif, qbeta, uniroot, runif)
+importFrom(graphics, plot, abline, lines, points, par)
