--- a/ejabT1E/NAMESPACE
+++ b/ejabT1E/NAMESPACE
@@ -1,10 +1,14 @@
 export(ejab01)
 export(objective_C)
 export(estimate_Cstar)
+export(estimate_Cstar_alpha)
 export(detect_type1)
 export(diagnostic_U)
 export(diagnostic_qqplot)
+export(diagnostic_qqplot_fit)
 export(calibration_plot)
+export(calibration_plot_new)
+export(plot_data_summary)
 export(ejab_pipeline)
 
 importFrom(stats, pchisq, qchisq, ppoints, qunif, qbeta, uniroot, runif)
