--- a/ejabT1E/NAMESPACE
+++ b/ejabT1E/NAMESPACE
@@ -13,3 +13,4 @@ export(ejab_pipeline)
 
 importFrom(stats, pchisq, qchisq, ppoints, qunif, qbeta, uniroot, runif)
 importFrom(graphics, plot, abline, lines, points, par)
+importFrom(dplyr, "%>%")
